# dune_winder_p3

./: .gitignore  README.md  configuration.toml  configuration.xml  docker-compose.yml  dune-winder-hs.cabal  manual_port.py  pyproject.toml  start_winder_and_grafana.bat
.agents/: AGENTS.md
.claude/: CLAUDE.md  settings.local.json
config/: machineCalibration.json  machineCalibration.xml  prometheus.yml
data/: log.csv
docs/: A subtle bug.md  ArchitecturePriorityBacklog.md  CircleLineQueue.md  GCodeDomainArchitecture.md  PlcLadderSimulatorAssumptions.md  PlcLadderWorkflow.md  PlcPythonLadderPortSpec.md  PlcWinderCommunication.md  README.md  RecipeTemplateLanguage.md  UVRecipeGCodeReference.md  WaypointPathPlanning.md  WebUIHardeningPlan.md  failing-tests.md  filleted_polygon.md  plcSimulationPlan.md  todo.md  uDescription.md  vDescription.md
gc_files/: G-layer.gc  Handoff_test.gc  U-layer.gc  V-layer-test.gc  V-layer.gc  X-layer.gc  handoffs.gc  pinTest.gc  random_z.gc  xy_oscillate.gc  z_oscillate.gc
plc/: controller_level_tags.json  instruction_set.md  manifest.json
src/: CapSegSpeed.txt  convert_plc_rllscrap.py  enqueueRoutine.txt  enqueueRoutine_3d_arc.txt  export_plc_metadata.py  export_plc_tag_values.py  motionQueueArc3DTest.py  motionQueueTest.py  motionQueueTest_gui.py  moveZroutine.txt  move_xy_routine.txt  simplify_pasteable_branches.py  version.xml
tests/: _command_api_test_support.py  test_app_config.py  test_cap_segments_speed.py  test_command_registry.py  test_command_validation.py  test_convert_plc_rllscrap.py  test_embedded_module_tests.py  test_g_code_handler_safety.py  test_gcode_domain.py  test_head.py  test_json.py  test_ladder_simulated_plc.py  test_log.py  test_main.py  test_manual_calibration.py  test_merge_planner.py  test_metrics_collector.py  test_motion_queue_3d_arc.py  test_motion_queue_test_gui.py  test_motion_safety.py  test_motion_segment_patterns.py  test_plc_branch_simplifier.py  test_plc_ladder_metadata.py  test_plc_ladder_parser.py  test_plc_ladder_runtime.py  test_plc_logic.py  test_plc_manifest.py  test_plc_metadata_export.py  test_plc_mode.py  test_plc_rung_transform.py  test_plc_speed_capping.py  test_plc_tag_values_export.py  test_primary_thread.py  test_process.py  test_queued_motion.py  test_recipe.py  test_recipe_period_detection.py  test_recipe_template_language.py  test_remote_command.py  test_sim_plc_commands.py  (+11 more)
tools/: check_plc_queue_cap.py  check_z_move_paths.py  plc_pycomm3_check.py
web/: FTP_Commands.txt  Tmp2B0C.tmp  Tmp5CC.tmp  Tmp9774.tmp  TmpF3A5.tmp  cameraDump.txt  index.html  (+2 more)
(+543 files in other folders)
