cabal-version:      3.0
name:               dune-winder-hs
version:            0.1.0.0
build-type:         Simple
license:            MIT
author:             ben
maintainer:         ben
synopsis:           Haskell utilities for dune-winder

library
  exposed-modules:  PlcRungTransform
  hs-source-dirs:   haskell/src
  build-depends:
      base ^>=4.18
    , megaparsec ^>=9.7
    , text ^>=2.0
  default-language: GHC2021

executable plc-rung-transform-hs
  main-is:          Main.hs
  hs-source-dirs:   haskell/app
  build-depends:
      base ^>=4.18
    , dune-winder-hs
    , text ^>=2.0
  default-language: GHC2021
