cabal-version:      3.0
name:               dune-winder-hs
version:            0.1.0.0
build-type:         Simple
license:            MIT
author:             ben
maintainer:         ben
synopsis:           Haskell utilities for dune-winder

library
  exposed-modules:
      PlcRungTransform
    , DuneWinder.Transpiler
  other-modules:
      DuneWinder.Transpiler.Builtins
    , DuneWinder.Transpiler.Emit
    , DuneWinder.Transpiler.IR
    , DuneWinder.Transpiler.Lower
    , DuneWinder.Transpiler.RegisterAllocator
    , DuneWinder.Transpiler.Syntax
    , DuneWinder.Transpiler.Types
  hs-source-dirs:   haskell/src
  build-depends:
      base ^>=4.18
    , containers ^>=0.6
    , megaparsec ^>=9.7
    , text ^>=2.0
  default-language: GHC2021

executable plc-rung-transform-hs
  main-is:          rllscrapTransformMain.hs
  hs-source-dirs:   haskell/app
  build-depends:
      base ^>=4.18
    , dune-winder-hs
    , text ^>=2.0
  default-language: GHC2021

executable plc-transpiler-hs
  main-is:          TranspileMain.hs
  hs-source-dirs:   haskell/app
  build-depends:
      base ^>=4.18
    , dune-winder-hs
    , filepath ^>=1.4
    , text ^>=2.0
  default-language: GHC2021
