[project]
name = "dune-winder"
version = "0.1.0"
description = "GUI for the APA winder at UChicago"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pycomm3>=1.2.14",
    "ruff>=0.9.9",
    "influxdb-client>=1.40.0",
]

[project.scripts]
dune-winder = "dune_winder.main:main"
plc-rung-transform = "dune_winder.plc_rung_transform:main"
plc-import = "dune_winder.plc_import:main"
plc-manifest = "dune_winder.plc_manifest:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
indent-width = 2
